fix Arrows overlap

--- a/packages/design-system/src/components/SwiperCarousel/web/SwiperCarousel.module.scss
+++ b/packages/design-system/src/components/SwiperCarousel/web/SwiperCarousel.module.scss
@@ -52,6 +52,7 @@
   justify-content: flex-end;
   gap: var(--spacing-4);
   margin-top: var(--spacing-8);
+  z-index: 1;
 }
 
 .navButton {
